# WGVK

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  a.out  parser.py  x86_64-w64-mingw32.cmake
.github/workflows/: cmake-multi-platform.yml
examples/: asynchronous_loading.c  basic_compute.c  basic_glsl_shader.c  basic_wgsl_shader.c  common.h  drm_surface.c  example_cpp_api.cpp  glfw_surface.c  multi_submit.c  raytracing.c  rgfw_surface.c  surface_wgvk.c
include/: config.h  glslang_c_api.h  tint_c_api.h  wgvk.h  wgvk_config.h  wgvk_structs_impl.h
include/webgpu/: webgpu.h
resources/: compute_root.comp  compute_root.spv  compute_square.comp  compute_square.spv  simple_compute.spv  simple_shader.spv
resources/android/: AndroidManifest.xml  build.sh
resources/android/jni/: Android.mk  Application.mk  main.cpp
resources/android/res/layout/: activity_main.xml
resources/android/src/com/example/minimal/: MainActivity.java
src/: glslang_c_api.cpp  spirv_reflect.c  tint_c_api.cpp  vma_impl.cpp  volk.c  wgvk.c
src/tests/: test_erasable_map.c
